--- a/.github/workflows/lighthouse-ci.yml
+++ b/.github/workflows/lighthouse-ci.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --prefix ./lighthouse-ci-demo
 
       - name: Run Lighthouse CI
         run: npx lighthouse-ci --config=lighthouse.config.js
